--- a/trunk/1.1.0/ChromeApp/manifest.json
+++ b/trunk/1.1.0/ChromeApp/manifest.json
@@ -1,8 +1,8 @@
 {
     "content_scripts": [ {
-        "exclude_globs": [  ],
+        "exclude_globs": ["*kongregate.com/games/*/legacy-of-a-thousand-suns/tags*" ],
         "exclude_matches": [  ],
-        "include_globs": [ "*kongregate.com/games/*/legacy-of-a-thousand-suns" ],
+        "include_globs": [ "*kongregate.com/games/*/legacy-of-a-thousand-suns*" ],
         "js": [ "124753_nightly.user.js" ],
         "matches": [ "http://*/*", "https://*/*" ],
         "run_at": "document_idle"
@@ -11,5 +11,5 @@
     "converted_from_user_script": true,
     "description": "Kongregate Legacy of a Thousand Suns Raid Link Helper",
     "name": "doomscript",
-    "version": "1.1.29"
+    "version": "1.1.31"
 }
