--- a/1.1.0/ChromeApp/manifest.json
+++ b/1.1.0/ChromeApp/manifest.json
@@ -2,10 +2,11 @@
     "content_scripts": [ {
         "exclude_globs": ["*kongregate.com/games/*/legacy-of-a-thousand-suns/tags*" ],
         "exclude_matches": [  ],
-        "include_globs": [ "*kongregate.com/games/*/legacy-of-a-thousand-suns*" ],
+        "include_globs": [ "*kongregate.com/games/*/legacy-of-a-thousand-suns*", "*50.18.1*.*/kong/*" ],
         "js": [ "124753_nightly.user.js" ],
         "matches": [ "http://*/*", "https://*/*" ],
-        "run_at": "document_idle"
+        "run_at": "document_idle",
+        "all_frames": true
     } ],
     "manifest_version": 2,
     "converted_from_user_script": true,
